@@ -6,11 +6,13 @@ The following people made especially gracious contributions of their
 time and energy in helping to track down bugs, add new features, and
 generally assist in the GRUB 2 maintainership process:
 
+Guillem Jover <guillem@hadrons.org>
 Jeroen Dekkers <jeroen@dekkers.cx>
 Johan Rydberg <jrydberg@night.trouble.net>
 Hollis Blanchard <hollis@penguinppc.org>
 Marco Gerards <metgerards@student.han.nl>
 NIIBE Yutaka <gniibe@m17n.org>
+Robert Bihlmeyer <robbe@orcus.priv.at>
 Timothy Baldwin <T.E.Baldwin99@members.leeds.ac.uk>
 Tomas Ebenlendr <ebik@ucw.cz>
 Tsuneyoshi Yasuo <tuneyoshi@naic.co.jp>
